# libghostty-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  windows-ci.yml
crates/ghostty-sys/: build.rs
crates/ghostty/src/: alloc.rs  build_info.rs  error.rs  fmt.rs  focus.rs  key.rs  lib.rs  mouse.rs  osc.rs  paste.rs  render.rs  sgr.rs  style.rs  terminal.rs
crates/libghostty-vt/: Cargo.toml  README.md
crates/libghostty-vt-sys/: Cargo.toml  README.md  build.rs
crates/libghostty-vt-sys/src/: bindings.rs  lib.rs  shim.rs
crates/libghostty-vt-sys/tools/: gen_bindings.rs
crates/libghostty-vt/src/: alloc.rs  build_info.rs  fmt.rs  focus.rs  key.rs  lib.rs  log.rs  mouse.rs  osc.rs  paste.rs  render.rs  screen.rs  sgr.rs  style.rs  terminal.rs
crates/libghostty-vt/src/kitty/: graphics.rs
example/ghostling_rs/: Cargo.toml
example/ghostling_rs/src/: main.rs
scripts/: cargo-zig-linker
